# MicroP4

./: .gitattributes  .gitignore  .gitmodules  404.html  Makefile  README.md  compile_examples.sh  config.toml  index.html  index.json  index.xml  modular-firewallv1model.p4  modular-natv1model.p4  modular-qosrouterv4v1model.p4  modular-qosrouterv6v1model.p4  modular-routerv4v1model.p4  modular-routerv6v1model.p4  multi-functionv1model.p4  sitemap.xml
extensions/csa/: CMakeLists.txt  README.md  csa-semantics.txt  l2l3_v1model.p4
extensions/csa/backend/tofino/: annotateFields.cpp  annotateFields.h  msaTofinoBackend.cpp  msaTofinoBackend.h  replaceByteHdrStack.cpp  replaceByteHdrStack.h  toTofino.cpp  toTofino.h  tofinoConstants.cpp  tofinoConstants.h
extensions/csa/backend/v1model/: msaV1ModelBackend.cpp  msaV1ModelBackend.h  toV1Model.cpp  toV1Model.h  v1modelConstants.cpp  v1modelConstants.h
extensions/csa/csa-example/: common.p4  ecn.json  ecn.p4  ecnv4.p4  ecnv6.p4  filter.json  filter.p4  firewall-main.p4  forwarding.json  forwarding.p4  ipv4-routing.json  ipv4-routing.p4  ipv4.json  ipv4.p4  ipv6.json  ipv6.p4  l2.json  l2.p4  multi-function-main.p4  nat-main.p4  nat.json  nat.p4  routing-main.p4  routingv4-main.p4  routingv4-qos-main.p4  routingv6-main.p4  routingv6-qos-main.p4
extensions/csa/ir/: csa.def  dbprint-csa-ext.cpp  ir-csa-ext.cpp
extensions/csa/linker/: csaModel.h  csamidend.cpp  csamidend.h
extensions/csa/midend/: alignParamNames.cpp  alignParamNames.h  cloneWithFreshPath.cpp  cloneWithFreshPath.h  compareStorageExp.cpp  compareStorageExp.h  concatDeParMerge.cpp  concatDeParMerge.h  controlStateReconInfo.cpp  controlStateReconInfo.h  csaExternSubstituter.cpp  csaExternSubstituter.h  csaModel.h  csamidend.cpp  csamidend.h  deParMotion.cpp  deParMotion.h  deParMotionCSTRChkr.cpp  deParMotionCSTRChkr.h  deadFieldElimination.cpp  deadFieldElimination.h  deparserConverter.cpp  deparserConverter.h  deparserEvaluator.cpp  deparserEvaluator.h  deparserInverter.cpp  deparserInverter.h  hdrToStructs.cpp  hdrToStructs.h  headerMerge.cpp  headerMerge.h  identifyStorage.cpp  identifyStorage.h  mcengineConverter.cpp  mcengineConverter.h  mergeDeclarations.cpp  mergeDeclarations.h  msaNameConstants.cpp  msaNameConstants.h  msaPacketSubstituter.cpp  (+29 more)
extensions/csa/monolithic-examples/: Makefile  README.md  firewall.p4  gw-vxlan-main.p4  multifunctional.p4  natting.p4  router-ipsrv4ipv6-main.p4  router-ipv4v6-nat-acl-main.p4  router-vlan-main.p4  router_ipv4v6srv6_main.p4  routerv46-main.p4  routerv46-nat-pt-main.p4  routerv46SRv6-main.p4  routerv46lrx_main.p4  routerv46lsrx-main.p4  routerv4_main.p4  routerv6-main.p4  routing_ipv4.p4  routing_ipv4_qos.p4  routing_ipv6.p4  routing_ipv6_qos.p4  srv6router-main.p4  tofino-monolithic-issue.txt  vxlan-int-main.p4
extensions/csa/msa-examples/: Makefile  README.md  ipv4-acl.p4  ipv4toipv6.p4  ipv6-nat-acl.p4  mpls-lsr-x.p4  router-ipv4v6-nat-acl.p4  routerv46SRv6-main.p4  routerv46lrx-main.p4  routerv6-main.p4  run_up4_v1model.sh  tofino-multi-arch-include.txt  variable_initialization_fix.txt
extensions/csa/msa-examples/lib-src/: common.up4  ip-sr-v4.up4  ipv4-acl.up4  ipv4-nat-acl.up4  ipv4.up4  ipv6-acl.up4  ipv6-nat-acl.up4  ipv6.up4  l3.up4  mpls-lr-x.up4  mpls-lsr-x.up4  mpls-lsr.up4  srv4.up4  srv6-simple.p4  srv6-simple.up4
extensions/csa/msa-examples/main-programs/: qosrouterv4-main.p4  qosrouterv4-main.up4  qosrouterv6-main.p4  qosrouterv6-main.up4  router-ipv4srv4ipv6-main.p4  router-ipv4v6-nat-acl.p4  router-ipv4v6-nat-acl.up4  router-vlan-main.p4  router-vlan-main.up4  router_ipv4srv4ipv6_main.up4  router_ipv4v6_nat_acl.up4  router_ipv4v6srv6_main.up4  routerv4-main.p4  routerv4-main.up4  routerv4-simple-main.p4  routerv4-simple-main.up4  routerv46-main.p4  routerv46-main.up4  routerv46-nat-pt-main.p4  routerv46SRv6-main.p4  routerv46_nat_pt_main.p4  routerv46lrx-main.p4  routerv46lrx-main.up4  routerv46lrx_main.up4  routerv46lsrx-main.p4  routerv46lsrx-main.up4  routerv4_main.up4  routerv6-main.p4  routerv6-main.up4  routerv6_main.up4  sr6_main.p4  sr6_main.up4  switch-main.p4  switch-main.up4
extensions/csa/msa-examples/mpls-issues/: mpls-ler.p4  mprouter-main-tofino.p4
extensions/csa/msa-examples/tofino_compiled_programs/: mprouter-x-main-tofino.p4  routerv46SRv6-main-tofino.p4  routerv46lrx-main-tofino.p4
extensions/csa/msa-v2-example/: Filter_L4.json  Filter_L4.p4  Makefile  Nat_L3.json  Nat_L3.p4  Nat_L4.json  Nat_L4.p4  common.p4  ecn.p4  ecnv4.json  ecnv4.p4  ecnv6.json  ecnv6.p4  ex-1.p4  filter_l4.p4  filterl3_v4.p4  filterl3_v6.p4  firewall-main-tofino.p4  firewall-main.p4  forwarding.p4  gw-vxlan-main.p4  int.p4  ip-sr-v4.p4  ipv4-nat-acl.p4  ipv4-routing.p4  ipv4.p4  ipv4toipv6.p4  ipv6-acl.p4  ipv6-ext.p4  ipv6.p4  l2vlan.p4  l3-sr-v4.p4  l3.p4  l3v4.json  l3v4.p4  l3v6.json  l3v6.p4  l3vlan.p4  microp4-switch.p4  modular-firewall.p4  (+68 more)
extensions/csa/msa-v2-example/switch-p4/: mac-acl.p4  switch-common.p4
extensions/csa/p4include/: csa.p4  msa-v2.p4  msa.p4
extensions/csa/switch/: main.cpp  msaOptions.h  options.h  parseInput.cpp  parseInput.h  version.h.cmake
extensions/csa/test-cases/: l3v4-encap.p4  modular-routerv4-encap.p4  nested-parser-caller-1-callee-1.p4  nested-parser-common.p4  test-0-sa-callee.p4  test-0-sa-common.p4  vlan.p4
extensions/csa/test-scratch/: common-encap.p4  common-vlan.p4  csa-type-checking-error-case-1.p4  ipv4-routing-csa.p4  l2switch.ip4  l2switch.p4  l3v4-encap.p4  modular-vlan.p4  mpls-loop-parser.p4  nested-cpackage-implementation-test.p4  nested-parser-callee-0.p4  notepad  simple-parser-dag.p4  simple-parser-with-loop.p4  tc-specialized-callee.p4  test-0-sa.p4  type-checking-basic-with-callee.p4  type-checking-basic.p4  type-parameter-ctor-error-case.p4  type-parameters-test.p4
extensions/csa/test-scratch/explicit-specialization/: common.ip4  l2l3.p4  l3.p4  tc-specialized-error.p4
extensions/csa/testdata/explicit-specialization/: l2.p4  l3-parser-dag.p4  (+3 more)
extensions/csa/tutorials/: README.md  exe_common.up4  p4c-compile.sh  run-tutorial.sh
(+163 files in other folders)
